# mayland

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  readme.md  waybar.config.jsonc
.github/workflows/: action.yml
mayctl/: Cargo.toml
mayctl/src/: cli.rs  event.rs  main.rs  term.rs
mayland-comm/: Cargo.toml
mayland-comm/src/: action.rs  error.rs  lib.rs
mayland-config/: Cargo.toml  readme.md
mayland-config/src/: action.rs  bind.rs  decoration.rs  error.rs  input.rs  layout.rs  lib.rs  outputs.rs  windowrules.rs
mayland-config/src/bind/: action.rs
resources/: mayland.desktop  mayland.mf
src/: action.rs  backend.rs  cli.rs  comm.rs  config.rs  cursor.rs  error.rs  input.rs  layout.rs  lib.rs  main.rs  render.rs  shell.rs  socket.rs  state.rs  trace.rs  utils.rs  winit.rs  xdg.rs
src/backend/: udev.rs  winit.rs
src/comm/: socket.rs
src/config/: bind.rs  input.rs
src/input/: device.rs
src/layout/: floating.rs  outputs.rs  tiling.rs  workspace.rs
src/render/: focusring.rs  shaders.rs
src/render/shaders/: focusring.frag
src/shell/: element.rs  focus.rs  grab.rs  window.rs  wlr.rs  xdg.rs  xwm.rs
src/shell/grab/: floating.rs
src/state/: compositor.rs  handlers.rs  pointer.rs
