[workspace]
members = [
	"mayctl",
	"mayland-comm",
	"mayland-config",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
dirs = "6.0.0"
mayland-config = { path = "mayland-config" }
mayland-comm = { path = "mayland-comm" }
serde = "1.0.219"
serde_json = "1.0.140"

[workspace.dependencies.smithay]
git = "https://github.com/Smithay/smithay"
default-features = false

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"

[workspace.lints.clippy]
equatable_if_let = "warn"
new_without_default = "allow"
redundant_clone = "warn"
type_repetition_in_bounds = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_semicolon = "warn"

[package]
name = "mayland"
version = { workspace = true }
edition = { workspace = true }
readme = "readme.md"

[dependencies]
anstream = "0.6.18"
async-channel = "2.3.1"
calloop = { version = "0.14.2", features = ["executor", "futures-io"] }
dirs = { workspace = true }
futures-util = { version = "0.3.31", default-features = false, features = ["std", "io"] }
indexmap = "2.9.0"
input = { version = "0.9.1", default-features = false, features = ["libinput_1_21"] }
jiff = "0.2.10"
libc = "0.2.172"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
mayland-config = { workspace = true }
mayland-comm = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
xcursor = "0.3.8"

[dependencies.smithay]
workspace = true
features = [
	"backend_drm",
	"backend_egl",
	"backend_gbm",
	"backend_libinput",
	"backend_udev",
	"backend_session_libseat",
	"backend_winit",
	"desktop",
	"renderer_glow",
	"use_system_lib",
	"wayland_frontend",
]

[dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay"
default-features = false
features = ["display-info"]

[lints]
workspace = true

[features]
default = []
debug = []
trace = ["debug"]
