[workspace]
members = [
	"mayctl",
	"mayland-comm",
	"mayland-config",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
dirs = "5.0.1"
mayland-config = { path = "mayland-config" }
mayland-comm = { path = "mayland-comm" }
serde = "1.0.214"
serde_json = "1.0.132"
thiserror = "2.0.1"

[workspace.dependencies.smithay]
git = "https://github.com/Smithay/smithay"
default-features = false

[workspace.lints.clippy]
new_without_default = "allow"
undocumented_unsafe_blocks = "warn"

[package]
name = "mayland"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
async-channel = "2.3.1"
calloop = { version = "0.14.1", features = ["executor", "futures-io"] }
chrono = { version = "0.4.38", features = ["clock", "std"] }
dirs = { workspace = true }
futures-util = { version = "0.3.31", default-features = false, features = ["std", "io"] }
indexmap = "2.6.0"
input = { version = "0.9.1", default-features = false, features = ["libinput_1_21"] }
libc = "0.2.162"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
mayland-config = { workspace = true }
mayland-comm = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1.40"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xcursor = "0.3.8"

[dependencies.smithay]
workspace = true
features = [
	"backend_drm",
	"backend_egl",
	"backend_gbm",
	"backend_libinput",
	"backend_udev",
	"backend_session_libseat",
	"backend_winit",
	"desktop",
	"renderer_glow",
	"use_system_lib",
	"wayland_frontend",
]

[dependencies.smithay-drm-extras]
git = "https://github.com/Smithay/smithay"
default-features = false
features = ["display-info"]

[lints]
workspace = true

[features]
default = []
debug = []
trace = ["debug"]
