[package]
name = "mayland-config"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = "readme.md"

[dependencies]
annotate-snippets = "0.12.11"
bitflags = "2.10.0"
dirs = { workspace = true }
indexmap = { version = "2.13.0", features = ["serde"] }
mayfig = { git = "https://github.com/m4rch3n1ng/mayfig" }
mayland-comm = { workspace = true }
owo-colors = "4.2.3"
regex = "1.12.3"
regex-syntax = "0.8.9"
serde = { workspace = true, features = ["derive"] }
smithay = { workspace = true, features = ["backend_libinput"] }
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
